k8s/clusters/cluster-0/manifests/database/stackgres/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    external-dns.alpha.kubernetes.io/target: ingress.${INGRESS_DOMAIN}
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: network-rfc1918-ips@kubernetescrd
  name: stackgres
  namespace: database
spec:
  ingressClassName: traefik
  rules:
    - host: &host "stackgres.${INGRESS_DOMAIN}"
      http:
        paths:
          - backend:
              service:
                name: stackgres-restapi
                port:
                  number: 443
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - *host
      secretName: stackgres-tls
